# EM-automate

./: .env  .gitignore  KEYBINDINGS_README.md  LICENSE  README.md  REFACTORING_SUMMARY.md  WINDOW_OVERLAY_GUIDE.md  a.md  menu_config.json
.claude/: settings.local.json
backend/: __init__.py  api_server.py  pyproject.toml  requirements.txt  task_test.json
backend/assets/images/: README.md
backend/config/: coordinates.json  keybindings.json  macros.json
backend/core/: __init__.py  automation.py  automation_example.py  config.py  game_navigator.py  input_controller.py  keybindings.py  macro_engine.py  menu_config.py  menu_manager.py  task_executor.py  window_manager.py
backend/core/utils/: __init__.py  coordinate_parser.py  image_recognition.py
backend/tools/: README.md  __init__.py  coordinate_locator.py
frontend/: index.html  main.js  package.json  pnpm-lock.yaml  preload.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/components/: AboutPanel.vue  CommissionLetterPanel.vue  CommissionPanel.vue  FishingPanel.vue  KeyboardPanel.vue  MacroPanel.vue  NightSailingPanel.vue  TaskQueue.vue  TrainingPanel.vue
frontend/src/constants/: index.ts  menu-structure.ts  mission-types.ts
frontend/src/layouts/: MainLayout.vue  index.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  menu.ts  simple_task.ts  task.ts
frontend/src/styles/: README.md  example.scss  global.scss  mixins.scss  variables.scss
frontend/src/styles/components/: _panels.scss
frontend/src/types/: index.d.ts
frontend/src/utils/: api.ts  menu-generator.ts
frontend/src/views/: MainView.vue
scripts/: README.md  build.py  install.py  start.py
